add css header changes

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,7 +37,7 @@
                 <svg class="icon-film" width="24" height="24" aria-label="Главное меню">
 
                     <use class="icon-menu" href="./images/icon.svg#icon-film-1"></use>
-                </svg> <span class="logo-text">Filmoteka</span></a>
+                </svg> <span class="logo-text btn-shine">Filmoteka</span></a>
             <div class="site-nav" data-menu id="menu-container">
                 <a href="./index.html" lang="en"><button class="site-nav__btn home_btn current"
                         href="./index.html">Home</button></a>
