--- a/src/template/modal-card-about-film.hbs
+++ b/src/template/modal-card-about-film.hbs
@@ -42,11 +42,14 @@
             </p>
         </div>
         <div class="film__button__wrapper flip-2-hor-top-1 ">
-            <button type="button" class="film__button btn-controls btn__watch animate__animated animate__flipInX " data-movie-id="{{this.id}}">Add to watched</button>
-            <button type="button" class=" film__button btn-controls btn__queue animate__animated animate__flipInX" data-movie-id="{{this.id}}">Add to queue</button>
-            <button type="button" class=" film__button btn-controls btn__trailer animate__animated animate__flipInX"
-                data-movie-id="{{this.id}}">Watch the trailer</button>
+            <button type="button" class="film__button btn-controls btn__watch " data-movie-id="{{this.id}}">Add to watched</button>
+            <button type="button" class=" film__button btn-controls btn__queue" data-movie-id="{{this.id}}">Add to queue</button>
+           <!-- <button type="button" class=" film__button btn-controls btn__trailer"
+                data-movie-id="{{this.id}}">Watch the trailer</button>-->
         </div>
+<button type="button" class=" film__button btn-controls btn__trailer" data-movie-id="{{this.id}}">Watch the
+    trailer</button>
+
         <button type="button" class="close__button animate__animated animate__flipInX" data-action="close-modal"></button>
     </div>
 </div>
