change size modal team

--- a/src/sass/components/_footer-team.scss
+++ b/src/sass/components/_footer-team.scss
@@ -28,7 +28,8 @@ ul {
   transform: translate(-50%, -50%);
 
   max-width: 60%;
-  height: 98%;
+  // height: 98%;
+  height: 83%;
   border-radius: 5px;
   background-color: white;
   overflow-y: scroll;
