--- a/src/sass/components/_lightbox.scss
+++ b/src/sass/components/_lightbox.scss
@@ -29,10 +29,7 @@
 
 .lightbox__content {
   z-index: 12;
-  display: block;
-  // border: 3px solid red;
-  // height: 500px;
-  // width: 600px;
+  display: block;  
 }
 
 iframe {
@@ -59,14 +56,13 @@ iframe {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 48px;
-  height: 48px;
+  width: 40px;
+  height: 40px;
   padding: 0;
   margin: 0;
   border: none;
   border-radius: 50%;
-  background-color: transparent;
-  color: #fff;
+  background-color: $background-modal-color;
   cursor: pointer;
   transition: background-color var(--animation-duration) var(--timing-function);
   outline: none;
@@ -78,5 +74,5 @@ iframe {
 
 .lightbox__button:hover,
 .lightbox__button:focus {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: $accent-color;  
 }
