--- a/src/template/modal-card-about-film.hbs
+++ b/src/template/modal-card-about-film.hbs
@@ -36,6 +36,7 @@
             </ul>
         </div>
         <div>
+            <button type="button" class=" film__button  btn-controls btn__trailer" data-movie-id="{{this.id}}">trailer</button>
             <h3 class="film__about__title">About</h3>
             <p class="film__about__text">
                 {{this.overview}}
@@ -47,8 +48,7 @@
            <!-- <button type="button" class=" film__button btn-controls btn__trailer"
                 data-movie-id="{{this.id}}">Watch the trailer</button>-->
         </div>
-<button type="button" class=" film__button btn-controls btn__trailer" data-movie-id="{{this.id}}">Watch the
-    trailer</button>
+
 
         <button type="button" class="close__button animate__animated animate__flipInX" data-action="close-modal"></button>
     </div>
