--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -17,6 +17,8 @@
 #topcontrol {
   margin-bottom: 70px;
   margin-right: 40px;
+  background-color: white;
+  border-radius: 40%;
 
   @media screen and (min-width: $tablet) and (max-width: $desktop) {
     margin-bottom: 70px;
