--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -39,8 +39,7 @@
                     <use class="icon-menu" href="./images/icon.svg#icon-film-1"></use>
                 </svg> <span class="logo-text btn-shine">Filmoteka</span></a>
             <div class="site-nav" data-menu id="menu-container">
-                <a href="./index.html" lang="en"><button class="site-nav__btn home_btn current"
-                        href="./index.html">Home</button></a>
+              <button class="site-nav__btn home_btn current">Home</button>
                 <button class="site-nav__btn library_btn">My library</button>
 
             </div>
@@ -48,7 +47,7 @@
         
         <div class="input-container">
             <form class="form-field">
-                <input class="input" type="text" name="searchQuery" placeholder="Поиск фильмов">
+                <input class="input" type="text" name="searchQuery" placeholder="Search film...">
                 
                 <button class="svg-btn" type="submit"><svg class="icon-search" width="20" height="20" aria-label="Главное меню" type ="submit">
                     <use class="icon-menu" href="./images/icon.svg#icon-search-2"></use>
