--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -63,8 +63,12 @@
 
 .thumb img {
   width: 100%;
+
   border-radius: 5px;
   margin-bottom: 10px;
+}
+.image-thumb {
+  height: 411px;
 }
 //style for card
 .card-wrap {
