--- a/src/template/modal-card-about-film.hbs
+++ b/src/template/modal-card-about-film.hbs
@@ -1,10 +1,22 @@
 <div class="modal__backdrop"></div>
 
 <div class="modal__container">
-    <div class="film__image">
+
+<div class="film__image">
+
+
+    {{#if poster_path}}
+<img class="image" src="https://image.tmdb.org/t/p/w500{{poster_path}}">
+    {{else}}
+   <img class="image" src="https://sd.keepcalms.com/i-w600/sorry-no-picture-available-2.jpg">
+    {{/if}}
+</div>
+
+
+   <!-- <div class="film__image">
     
     <img class="image" src="https://image.tmdb.org/t/p/w500{{poster_path}}" alt="Movie Poster"/>
-    </div>
+    </div>-->
 
 
     <div class="film__information">
