--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,7 +8,7 @@
 @import './components/modal';
 @import './components/footer';
 @import './components/footer-team';
-@import './components/lightbox';
+@import './components/trailer';
 @import './components/theme.scss';
 
 @import './components/overlay-btn';
